# fontobene-qt

./: CHANGELOG.md  CMakeLists.txt  README.md  fontobene-qt-5.pc.example
.github/workflows/: ci.yml
fontobene-qt/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
